# unity_code_mcp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  stats.toml
.claude/: settings.local.json
.serena/: project.yml
.trae/rules/: project_rules.md
UnityProject/Assets/Editor/: TestExecutionTests.cs  TestFail.cs  TestThatWillTimeOut.cs  TestWithLargeLog.cs
UnityProject/Assets/PlayModeTest/: RealPlayModeTest.cs  RealPlayModeTests.asmdef
UnityProject/Assets/Scripts/: Test.cs
UnityProject/Assets/UI/: NewUXMLTemplate.uxml  hello.uss
docs/: TODO.md  TestExecution.md  UnityPackageMessagingProtocol.md  project.md  roots.md  unity_project.md
examples/: messaging_demo.rs
src/: lib.rs  logging.rs  main.rs  mcp_server.rs  test_utils.rs  unity_log_manager.rs  unity_log_utils.rs  unity_manager.rs  unity_manager_tests.rs  unity_messages.rs  unity_messaging_client.rs  unity_messaging_client_tests.rs  unity_project_manager.rs  unity_refresh_task.rs  unity_refresh_task_tests.rs  unity_test_task.rs  unity_test_task_tests.rs
