[package]
name = "unity_code_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
serde_yaml = "0.9.34"
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
rust-mcp-sdk = { version = "0.5.0", features = ["server"] }
