[package]
name = "unity_code_mcp"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
serde_yaml = "0.9.34"
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
rmcp = { version = "0.3.0", features = ["server", "transport-io"] }
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
